[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/LevelSelect.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.258824, 0.321569, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "SÃ©lectionnez un niveau"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = -176.0
margin_right = -580.0
margin_bottom = -136.0
custom_fonts/font = SubResource( 2 )
text = "Meilleur temps :"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreValue" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 736.0
margin_top = -176.0
margin_right = -388.0
margin_bottom = -136.0
custom_fonts/font = SubResource( 2 )
text = "999.999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -171.0
margin_right = 170.0
margin_bottom = -85.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
text = "Niveau 1"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.0
margin_top = -43.0
margin_right = 178.0
margin_bottom = 43.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
disabled = true
text = "Niveau 2"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -46.0
margin_right = 144.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
text = "Retour"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Level1" to="." method="_on_Level1_mouse_entered"]
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="mouse_entered" from="Level2" to="." method="_on_Level2_mouse_entered"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
